--- a/package.json
+++ b/package.json
@@ -9,13 +9,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.4.1",
-    "vite": "^4.5.2"
+    "@vitejs/plugin-react": "^4.2.0",
+    "vite": "^4.5.0"
   }
 }
